--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <div class="section-title">contact</div>
                         <h2>get in touch with us</h2>
                         
-                            <i class="fas fa-envelope"></i><a href="mailto:anmolbal@berkeley.edu"> anmolbal@berkeley.edu</a>
+                            <i class="fas fa-envelope"></i><a href="mailto:claritymentorshipp@gmail.com"> clarity@gmail.com</a>
                         <h3>follow clarity on social media</h3>
                         <span class="fa-stack">
                             <a href="https://www.linkedin.com/company/clarity-official/">
